Develop for v3 into develop (#215)
* SIP-1220|migration of the PoC to the framework

* SIP-1220|formatting

* SIP-1220|switch to SIP MC and change to docs folder

* Add after hook and make hooks optional

* - New POC working version with slow tests

* - Multicast implementation started

* - Quick fix of the falling test

* - One level multicast implemented

* - Simple support for enrich

* - Simple doubled routes added

* - Minor renaming

* Add out endpoints for testing to central endpoint register

* Add integration tests for testing route

* SIP-1334|removing the need for build() method, assining route ids & formatting

* Resolving bugs related to creation of endpoint URI duplicate for Test Kit testing

* Add handler to update ids of processors on testing routes

* Method refactor

* Adding framework auto config for automatic loading RouteStarter as bean

* Add exception handling for central router without from definition

* Remove multicast when only one connector. Add ids to sipmc bridge routes. (#156)

* Rest DSL central router POC (#154)

* Add rest dsl to in connector

* Add integration test

* onException configuration is done on Connector level (one RouteBuilder level) for InConnectors. Same implementation is in progess for other side - OutConnectors. Additionally there is a refactoring related to RouteBuilders in class UseCaseTopologyDefinition (#157)

* SIP-1350|re-packaging & extracting adapter building from adapter defining part 1

* Add global and scenario configuration support

* Add route config to anonymous route builder

* Add integration test for global configuration

* Refactoring onException Connectors level configuration (#158)

* Remove onException configurations from internal sipmc-direct route. Add 2 integration tests with onException configuration on InConnector and OutConnector level

* Add DirtiesContext annotation

* Add DisableJmx to on exception test

Co-authored-by: Nemi